--- a/game.css
+++ b/game.css
@@ -1,70 +1,75 @@
-
-            .square {
-  width: 170px;
-  height: 150px;
-  border-style: solid;
-  border-color: black;
+.square {
+  width: 80px;
+  height: 80px;
+  border-style: dashed;
+  border-color: red;
 }
-  .grid {
+
+.grid {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-content: center;
-  width: 800px;
-  height: 1070px;
+  width: 350px;
+  height: 350px;
+  
 }
 
-*/
-.highlight{
-    border-width = "thick";
-}
-
-.normal{
-    border-width = "thin";
-}
-
-.extra{
+.extra {
   width: 170px;
   height: 150px;
   border-style: solid;
 }
 
-.empty{
-    position:absolute;
-    top:845px;
-    left:580px;
+.empty {
+  
+  border-style: dashed;
+  border-color: red;
+  position: absolute;
+  top: 346px;
+  left: 265px;
 }
 
-div{
-    background-size:cover;
+div {
+  background-size: cover;
 }
 
-.button1{
-    position:absolute;
-    top:200px;
-    right:300px;
+.button1 {
+  position: absolute;
+  top: 200px;
+  right: 300px;
+    border-width:10px;
+  border-color:red;
+
+  
+  
 }
 
-.button2{
-    position:absolute;
-    top:200px;
-    right:400px;
+.button2 {
+  position: absolute;
+  top: 200px;
+  right: 400px;
+    border-width:10px;
+    border-color:red;
+
+  
+
 }
 
-.button3{
-    position:absolute;
-    top:300px;
-    right:410px;
+.button3 {
+  position: absolute;
+  top: 300px;
+  right: 420px;
+  border-color:red;
+  border-width:10px;
 }
 
-.button4{
-    position:absolute;
-    top:300px;
-    right:290px;
-}
+.button4 {
+  position: absolute;
+  top: 300px;
+  right: 290px;
+    border-color:red;
 
-.button5{
-    position:absolute;
-    top:400px;
-    right:340px;
+    border-width:10px;
+
 }
